trybuild-qcell/src/compiletest/lcell-16.stderr
error[E0502]: cannot borrow `cell` as immutable because it is also borrowed as mutable
  --> src/compiletest/lcell-16.rs:9:35
   |
8  |         let cell_ref = cell.get_mut();
   |                        -------------- mutable borrow occurs here
9  |         assert_eq!(100, *owner.ro(&cell)); // Compile fail
   |                                   ^^^^^ immutable borrow occurs here
10 |         *cell_ref = 50;
   |         -------------- mutable borrow later used here
